# microlog

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Code Review - 2026-02-25.md  LICENSE  README.md  ab.cmake  build.ps1  conanfile.py  library.properties  meson.build  meson_options.txt  microlog.code-workspace  review.md  run_tests.ps1  run_tests.sh  vcpkg-configuration.json  vcpkg.json  version
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-packages.yml  build.yml  clang-tidy.yml  create-release.yml  create-tag.yml  release.yml  tag-on-version-change.yml  tag.yml  test-integration.yml  test-packages.yml  test-unit.yml  unit-tests.yml  verify-version.yml  verify.yml  workflow-merge.yml  workflow-pr.yml  workflow-release.yml  workflow-tag.yml  workflow-tests.yml
arduino/: BasicLogging.ino.template  keywords.txt  library.properties
cmake/: micrologConfig.cmake.in  micrologTargets.cmake  pack.cmake  packaging.cmake  target_interface.cmake
doc/: code.md  cpp_static_interface.md  design.md  extensions.md  features.md  style.md
example/: build-gcc.ps1  build-msvc.ps1  cpp_static_example.cpp  cross-msvc.txt  main.cpp  meson.build  simple_cpp_example.cpp
example/src/: main.c  main.cpp
examples/: ulog_cfg.h
examples/BasicLogging/: BasicLogging.ino
examples/LogLevels/: LogLevels.ino
examples/LogTopics/: LogTopics.ino
extensions/: README.md  ulog_generic_interface.h  ulog_lock_cmsis.c  ulog_lock_cmsis.h  ulog_lock_freertos.c  ulog_lock_freertos.h  ulog_lock_helpers.h  ulog_lock_macos.c  ulog_lock_macos.h  ulog_lock_pthread.c  ulog_lock_pthread.h  ulog_lock_threadx.c  ulog_lock_threadx.h  ulog_lock_win.c  ulog_lock_win.h  ulog_lock_zephyr.c  ulog_lock_zephyr.h  ulog_microlog6.h  ulog_microlog6_compat.h  ulog_syslog.c  ulog_syslog.h
extra/: ilog.h
include/: ulog.h  ulog.hpp  ulog_arduino.h  ulog_color.h  ulog_core.h  ulog_output.h  ulog_prefix.h  ulog_thread.h  ulog_time.h  ulog_topics.h
meson/: meson.build  meson.wrap.in
platformio/: IMPLEMENTATION.md  README.md  library.json
platformio/examples/advanced/: main.cpp  platformio.ini
platformio/examples/basic/: main.cpp  platformio.ini
ports/: README.md
ports/microlog/: portfile.cmake  usage  vcpkg.json
scripts/: build.ps1  build_arduino.ps1  build_cmake.ps1  build_cmake_abcmake.ps1  build_conan.ps1  build_extensions.ps1  build_meson.ps1  build_meson_wrap.ps1  build_platformio.ps1  build_src.ps1  build_vcpkg_port.ps1  build_vspkg.ps1  check-clang-tidy.ps1  gen_coverage.ps1  pack_ulog.py  publish_vcpkg_branch.ps1  publish_vcpkg_port.ps1  replace_variables.ps1  run_tests.ps1  test_platformio_examples.ps1  validate_platformio.ps1
src/: Untitled-1.md  color.c  core.c  log.c  log.h  output.c  prefix.c  print.c  print.h  thread.c  time.c  topics.c  ulog.c  ulog.h  ulog_arduino.cpp  ulog_color.c  ulog_core.c  ulog_object.c  ulog_object.h  ulog_output.c  ulog_prefix.c  ulog_t.h  ulog_thread.c  ulog_time.c  ulog_topics.c
src/core/: levels.c  lock.c  lock.h  log.c  object.c  object.h  print.c  print.h
test/manual_test/: CMakeLists.txt  cross-gcc.txt  meson.build
test/manual_test/src/: main.c
test/unit/test_default_config/: CMakeLists.txt  test_default_config.cpp
test_package/: CMakeUserPresets.json  build_cmake.ps1  build_conan.ps1  build_meson.ps1  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_runtime_config.c
tests/integration/arduino/: README.md  test_arduino.ps1
tests/integration/cpm/: CMakeLists.txt  test_cpm.ps1
tests/integration/packaging/: CMakeLists.txt  example.cpp  meson.build  test_cmake.ps1  test_meson.ps1
tests/integration/vcpkg/: CMakeLists.txt  example.c  test_vcpkg.ps1
tests/manual_test/: CMakeLists.txt  toolchain-gcc.cmake
tests/manual_test/src/: ilog.c  ilog.h  main.c
tests/test_package_build/: CMakeLists.txt  build_cmake.ps1  build_meson.ps1  conanfile.py  example.cpp  meson.build
tests/test_package_build/subprojects/microlog/src/: ulog.c
tests/unit/: CMakeLists.txt  TryMutex.hpp  force_link_all.c  gen_coverage.ps1  open_coverage.ps1  run_tests.ps1  test_additional_coverage.cpp  test_cleanup.cpp  test_color.cpp  test_core.c  test_core.cpp  test_custom_prefix.cpp  test_disabled.cpp  test_dynamic_config.cpp  test_dynamic_topics.cpp  test_edge_cases.cpp  test_event_api.cpp  test_event_getters.cpp  test_extra_outputs.c  test_formatting.c  test_locking.cpp  test_microlog6_compat.cpp  test_output.cpp  test_prefix.c  test_prefix.cpp  test_reentrancy.cpp  test_runtime_config.c  test_runtime_config.cpp  test_static_config_header.cpp  test_thread_safety.c  test_time.cpp  test_topics.c  test_topics.cpp  test_warn_not_enabled.cpp  ulog_config.h  ulog_static_config.h  ut_callback.c  ut_callback.h  ut_test_suite.c  ut_test_suite.h
